crates/sith_python_parser/tests/snapshots/valid_syntax@function_def_valid_return_expr.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/function_def_valid_return_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..125,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        BinOp(
                            BinOpExpr {
                                range: 13..22,
                                left: Name(
                                    NameExpr {
                                        range: 13..16,
                                        id: Name("int"),
                                        ctx: Load,
                                    },
                                ),
                                op: BitOr,
                                right: Name(
                                    NameExpr {
                                        range: 19..22,
                                        id: Name("str"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 24..27,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 24..27,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 28..58,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 32..35,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 35..37,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Lambda(
                            LambdaExpr {
                                range: 41..52,
                                parameters: Some(
                                    Parameters {
                                        range: 48..49,
                                        posonlyargs: [],
                                        args: [
                                            ParameterWithDefault {
                                                range: 48..49,
                                                parameter: Parameter {
                                                    range: 48..49,
                                                    name: Identifier {
                                                        id: Name("x"),
                                                        range: 48..49,
                                                    },
                                                    annotation: None,
                                                },
                                                default: None,
                                            },
                                        ],
                                        vararg: None,
                                        kwonlyargs: [],
                                        kwarg: None,
                                    },
                                ),
                                body: Name(
                                    NameExpr {
                                        range: 51..52,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 54..57,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 54..57,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 58..86,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 62..65,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 65..67,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Yield(
                            YieldExpr {
                                range: 72..79,
                                value: Some(
                                    Name(
                                        NameExpr {
                                            range: 78..79,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 82..85,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 82..85,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 86..125,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 90..93,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 93..95,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        If(
                            IfExpr {
                                range: 99..119,
                                test: BooleanLiteral(
                                    BooleanLiteralExpr {
                                        range: 106..110,
                                        value: true,
                                    },
                                ),
                                body: Name(
                                    NameExpr {
                                        range: 99..102,
                                        id: Name("int"),
                                        ctx: Load,
                                    },
                                ),
                                orelse: Name(
                                    NameExpr {
                                        range: 116..119,
                                        id: Name("str"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 121..124,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 121..124,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
