crates/sith_python_parser/tests/snapshots/valid_syntax@global_stmt.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/ok/global_stmt.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            Global(
                GlobalStmt {
                    range: 0..8,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 7..8,
                        },
                    ],
                },
            ),
            Global(
                GlobalStmt {
                    range: 9..23,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 16..17,
                        },
                        Identifier {
                            id: Name("y"),
                            range: 19..20,
                        },
                        Identifier {
                            id: Name("z"),
                            range: 22..23,
                        },
                    ],
                },
            ),
        ],
    },
)
```
